--- a/index.html
+++ b/index.html
@@ -2,10 +2,47 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ben's Math Tutoring</title>
+  <title>Ben Novik | Math Tutor for Kids</title>
 </head>
 <body>
-  <h1>Ben's Math Tutoring</h1>
-  <p>Welcome! This site is under construction, but it’s live.</p>
+  <h1>Math Tutoring for Elementary & Middle School Students</h1>
+
+  <h2>Hi, I'm Ben.</h2>
+
+  <p>
+    I’m a math tutor who works with younger students, helping them build a strong 
+    foundation and actually understand what they’re learning — not just memorize steps.
+  </p>
+
+  <h3>Why I Work Well With Kids</h3>
+  <p>
+    I’ve spent years helping and taking care of my little brother and younger cousins, 
+    and I’ve worked with children at summer camp. Through all of that, I’ve learned how 
+    important patience is. Kids learn best when they feel comfortable, supported, and 
+    able to ask questions without pressure.
+  </p>
+
+  <p>
+    My approach is calm, step-by-step, and focused on building confidence. I make math 
+    feel simpler and more logical so kids actually enjoy learning it.
+  </p>
+
+  <h3>What I Tutor</h3>
+  <ul>
+    <li>Basic math skills (addition, subtraction, multiplication, division)</li>
+    <li>Fractions & decimals</li>
+    <li>Word problems and logical thinking</li>
+    <li>Pre-Algebra</li>
+    <li>Algebra I</li>
+    <li>Homework help + test preparation</li>
+  </ul>
+
+  <h3>Contact Me</h3>
+  <p>
+    Parents can reach me directly at:  
+    <a href="mailto:your-email@example.com">your-email@example.com</a>
+  </p>
+
 </body>
 </html>
+
