--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
       font-weight: 600;
       text-decoration: none;
       font-size: 0.95rem;
+
+      .profile-photo {
+  display: block;
+  width: 180px;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 12px;
+  margin: 1rem auto 1.5rem;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+}
+
     }
 
     .button-link:hover {
@@ -92,6 +103,13 @@
     <h1>Math Tutoring for Elementary & Middle School Students</h1>
 
     <h2>Hi, I'm Ben.</h2>
+
+<!-- Real placeholder image -->
+<img 
+  src="https://via.placeholder.com/300x300.png?text=Ben+Novik" 
+  alt="Ben Novik placeholder photo"
+  class="profile-photo">
+
 
     <p>
       I’m a math tutor who works with younger students, helping them build a strong
