--- a/index.html
+++ b/index.html
@@ -139,6 +139,26 @@
       <li>Homework help + test preparation</li>
     </ul>
 
+     <h3>How Sessions Work</h3>
+    <p>
+      I offer one-on-one, in-person math tutoring and charge by the hour.
+      The first session is mostly about getting to know how your child learns
+      and where they’re getting stuck.
+    </p>
+
+    <p>
+      We’ll look over recent homework, quizzes, and tests so I can see what’s
+      confusing and what they already understand. Every child is different, so
+      I don’t use a one-size-fits-all method. Instead, I adjust how I explain
+      things based on how your child thinks and what helps it “click.”
+    </p>
+
+    <p>
+      From there, sessions focus on building understanding first, and grades
+      naturally improve as a result. The goal is for your child to feel more
+      confident, not just to get through assignments.
+    </p>
+    
     <h3>Contact Me</h3>
     <p>
       Parents can reach me directly at:<br>
