--- a/index.html
+++ b/index.html
@@ -104,10 +104,9 @@
 
     <h2>Hi, I'm Ben.</h2>
 
-<!-- Real placeholder image -->
 <img 
-  src="https://via.placeholder.com/300x300.png?text=Ben+Novik" 
-  alt="Ben Novik placeholder photo"
+  src="headshot_purple.jpg" 
+  alt="Photo of Ben Novik"
   class="profile-photo">
 
 
