--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
       text-decoration: none;
       font-size: 0.95rem;
 
-      .profile-photo {
+ .profile-photo {
   display: block;
-  width: 180px;
-  height: 180px;
+  max-width: 180px;    /* prevents huge image */
+  width: 100%;         /* scales down responsively */
+  height: 180px;       /* keeps consistent shape */
   object-fit: cover;
   border-radius: 12px;
   margin: 1rem auto 1.5rem;
   box-shadow: 0 8px 20px rgba(0,0,0,0.08);
 }
-
     }
 
     .button-link:hover {
@@ -107,7 +107,8 @@
 <img 
   src="headshot_purple.jpg" 
   alt="Photo of Ben Novik"
-  class="profile-photo">
+  class="profile-photo"
+>
 
 
     <p>
@@ -157,6 +158,12 @@
       naturally improve as a result. The goal is for your child to feel more
       confident, not just to get through assignments.
     </p>
+
+    <h3>Credentials</h3>
+<p>
+  Parents who want to see my academic background can view my diploma here:
+  <a href="credentials.html">View my credentials</a>
+</p>
     
     <h3>Contact Me</h3>
     <p>
