--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8">
   <title>Ben Novik | Math Tutor for Kids</title>
 
-  <!-- Basic styling to make the page look clean -->
   <style>
     body {
       margin: 0;
       padding: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background-color: #f3f4f6; /* light gray */
-      color: #111827;            /* dark gray text */
+      background-color: #f3f4f6;
+      color: #111827;
     }
 
     .page {
@@ -56,7 +55,7 @@
     }
 
     a {
-      color: #2563eb; /* blue link */
+      color: #2563eb;
       text-decoration: none;
     }
 
@@ -64,6 +63,7 @@
       text-decoration: underline;
     }
 
+    /* BUTTON */
     .button-link {
       display: inline-block;
       margin-top: 0.5rem;
@@ -74,58 +74,53 @@
       font-weight: 600;
       text-decoration: none;
       font-size: 0.95rem;
-
- .profile-photo {
-  display: block;
-  max-width: 180px;    /* prevents huge image */
-  width: 100%;         /* scales down responsively */
-  height: 180px;       /* keeps consistent shape */
-  object-fit: cover;
-  border-radius: 12px;
-  margin: 1rem auto 1.5rem;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-}
     }
 
     .button-link:hover {
       filter: brightness(0.95);
     }
 
-    .note {
-      font-size: 0.85rem;
-      color: #6b7280;
-      margin-top: 0.5rem;
+    /* PHOTO FIXED + RESPONSIVE */
+    .profile-photo {
+      display: block;
+      width: 180px;            /* final displayed width */
+      height: 180px;           /* fixed height so it's a consistent portrait */
+      max-width: 100%;         /* prevents overflow */
+      object-fit: cover;       /* crop correctly */
+      border-radius: 12px;
+      margin: 1rem auto 1.5rem;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
     }
   </style>
 </head>
+
 <body>
   <div class="page">
-    <h1>Math Tutoring for Elementary & Middle School Students</h1>
 
+    <h1>Math Tutoring for Elementary & Middle School Students</h1>
     <h2>Hi, I'm Ben.</h2>
 
-<img 
-  src="headshot_purple.jpg" 
-  alt="Photo of Ben Novik"
-  class="profile-photo"
->
-
+    <!-- YOUR REAL PHOTO -->
+    <img 
+      src="headshot_purple.jpg"
+      alt="Photo of Ben Novik"
+      class="profile-photo">
 
     <p>
-      I’m a math tutor who works with younger students, helping them build a strong
+      I’m a math tutor who works with younger students, helping them build a strong 
       foundation and actually understand what they’re learning — not just memorize steps.
     </p>
 
     <h3>Why I Work Well With Kids</h3>
     <p>
       I’ve spent years helping and taking care of my little brother and younger cousins,
-      and I’ve worked with children at summer camp. Through all of that, I’ve learned how
-      important patience is. Kids learn best when they feel comfortable, supported, and
+      and I’ve worked with children at summer camp. Through all of that, I’ve learned how 
+      important patience is. Kids learn best when they feel comfortable, supported, and 
       able to ask questions without pressure.
     </p>
 
     <p>
-      My approach is calm, step-by-step, and focused on building confidence. I make math
+      My approach is calm, step-by-step, and focused on building confidence. I make math 
       feel simpler and more logical so kids actually start to feel good about it.
     </p>
 
@@ -139,46 +134,27 @@
       <li>Homework help + test preparation</li>
     </ul>
 
-     <h3>How Sessions Work</h3>
+    <h3>How Sessions Work</h3>
     <p>
       I offer one-on-one, in-person math tutoring and charge by the hour.
-      The first session is mostly about getting to know how your child learns
-      and where they’re getting stuck.
+      The first session is mainly about understanding how your child learns 
+      and identifying any areas where they feel stuck.
     </p>
-
     <p>
-      We’ll look over recent homework, quizzes, and tests so I can see what’s
-      confusing and what they already understand. Every child is different, so
-      I don’t use a one-size-fits-all method. Instead, I adjust how I explain
-      things based on how your child thinks and what helps it “click.”
+      We’ll look over homework, quizzes, and tests so I can understand what’s confusing 
+      or intimidating. Every child learns differently, so I adapt my teaching style to 
+      match what works best for them.
     </p>
 
-    <p>
-      From there, sessions focus on building understanding first, and grades
-      naturally improve as a result. The goal is for your child to feel more
-      confident, not just to get through assignments.
-    </p>
-
-    <h3>Credentials</h3>
-<p>
-  Parents who want to see my academic background can view my diploma here:
-  <a href="credentials.html">View my credentials</a>
-</p>
-    
     <h3>Contact Me</h3>
     <p>
       Parents can reach me directly at:<br>
       <a href="mailto:your-email@example.com">your-email@example.com</a>
     </p>
 
-    <!-- This is a nicer-looking email button -->
-    <a class="button-link" href="mailto:your-email@example.com?subject=Math%20Tutoring%20for%20My%20Child">
+    <a class="button-link" href="mailto:your-email@example.com?subject=Math%20Tutoring%20Inquiry">
       Email Ben to ask about tutoring
     </a>
-
-    <p class="note">
-      I’m happy to answer questions about your child’s current level and how I can help.
-    </p>
   </div>
 </body>
 </html>
