--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
     /* PHOTO FIXED + RESPONSIVE */
     .profile-photo {
       display: block;
-      width: 180px;            /* final displayed width */
-      height: 180px;           /* fixed height so it's a consistent portrait */
-      max-width: 100%;         /* prevents overflow */
-      object-fit: cover;       /* crop correctly */
+      width: 180px;
+      height: 180px;
+      max-width: 100%;
+      object-fit: cover;
       border-radius: 12px;
       margin: 1rem auto 1.5rem;
       box-shadow: 0 8px 20px rgba(0,0,0,0.08);
@@ -100,7 +100,7 @@
     <h1>Math Tutoring for Elementary & Middle School Students</h1>
     <h2>Hi, I'm Ben.</h2>
 
-    <!-- YOUR REAL PHOTO -->
+    <!-- REAL PHOTO -->
     <img 
       src="headshot_purple.jpg"
       alt="Photo of Ben Novik"
@@ -144,6 +144,12 @@
       We’ll look over homework, quizzes, and tests so I can understand what’s confusing 
       or intimidating. Every child learns differently, so I adapt my teaching style to 
       match what works best for them.
+    </p>
+
+    <h3>Credentials</h3>
+    <p>
+      Parents who want to confirm my academic background can view my diploma here:<br>
+      <a href="credentials.html">View my credentials</a>
     </p>
 
     <h3>Contact Me</h3>
