--- a/credentials.html
+++ b/credentials.html
@@ -3,66 +3,156 @@
 <head>
   <meta charset="UTF-8">
   <title>Credentials | Ben Novik</title>
+
   <style>
+    :root {
+      --bg-dark: #0f172a;
+      --bg-light: #f3f4f6;
+      --card-bg: #ffffff;
+      --accent: #2563eb;
+      --accent-soft: #1d4ed8;
+      --text-main: #111827;
+      --text-muted: #6b7280;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
-      padding: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background-color: #f3f4f6;
-      color: #111827;
-    }
-
-    .page {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 32px;
-      background: #ffffff;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(15, 23, 42, 0.12);
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 1.8rem;
-      margin-bottom: 1rem;
-    }
-
-    p {
-      margin-bottom: 1rem;
-      font-size: 1rem;
-      color: #374151;
-    }
-
-    img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 8px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-      margin-top: 1rem;
-      margin-bottom: 2rem;
+      background-color: var(--bg-dark);
+      color: var(--text-main);
     }
 
     a {
-      color: #2563eb;
+      color: var(--accent);
       text-decoration: none;
-      font-weight: 600;
     }
 
     a:hover {
       text-decoration: underline;
     }
+
+    .top-nav {
+      background: #020617;
+      color: #e5e7eb;
+      padding: 0.75rem 1.5rem;
+      position: sticky;
+      top: 0;
+      z-index: 20;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+    }
+
+    .nav-inner {
+      max-width: 960px;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .nav-logo {
+      font-weight: 600;
+      letter-spacing: 0.03em;
+      font-size: 0.95rem;
+    }
+
+    .nav-links a {
+      margin-left: 1.25rem;
+      font-size: 0.9rem;
+      color: #e5e7eb;
+    }
+
+    .nav-links a:hover {
+      color: #ffffff;
+    }
+
+    .page {
+      max-width: 960px;
+      margin: 32px auto 40px;
+      padding: 30px 26px 34px;
+      background: var(--card-bg);
+      border-radius: 18px;
+      box-shadow: 0 20px 50px rgba(15,23,42,0.55);
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 1.9rem;
+      margin-bottom: 0.35rem;
+    }
+
+    p {
+      margin-bottom: 0.9rem;
+      color: var(--text-muted);
+    }
+
+    .diploma-img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 12px;
+      margin: 1rem 0 2rem;
+      box-shadow: 0 18px 40px rgba(15,23,42,0.45);
+    }
+
+    .btn-link {
+      display: inline-block;
+      margin-top: 0.25rem;
+      padding: 0.55rem 1.2rem;
+      border-radius: 999px;
+      border: 1px solid #d1d5db;
+      background: #ffffff;
+      font-size: 0.9rem;
+      color: #111827;
+    }
+
+    .btn-link:hover {
+      border-color: var(--accent);
+      color: var(--accent);
+    }
+
+    @media (max-width: 720px) {
+      .nav-inner {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.35rem;
+      }
+
+      .nav-links a {
+        margin-left: 0;
+        margin-right: 0.9rem;
+      }
+
+      .page {
+        margin: 20px 12px 28px;
+        padding: 22px 18px 26px;
+      }
+    }
   </style>
 </head>
+
 <body>
-  <div class="page">
+  <!-- TOP NAV (same as main site) -->
+  <header class="top-nav">
+    <div class="nav-inner">
+      <div class="nav-logo">BEN NOVIK • MATH TUTOR</div>
+      <nav class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="index.html#pricing">Pricing</a>
+        <a href="index.html#contact">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="page">
     <h1>Credentials</h1>
     <p>Below is my diploma for parents who would like to verify my academic background.</p>
 
-    <img src="diploma.JPG" alt="Ben Novik Diploma">
+    <img src="diploma.JPG" alt="Diploma for Ben Novik" class="diploma-img">
 
-    <p>
-      <a href="index.html">← Back to main site</a>
-    </p>
-  </div>
+    <a href="index.html" class="btn-link">← Back to main site</a>
+  </main>
 </body>
 </html>
