--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ben Novik | Private Math Tutor for Kids</title>
+  <title>Ben Novik | Private Math Tutor for Kids & Teenagers</title>
 
   <style>
     :root {
-      --bg-dark: #0f172a;      /* dark navy */
-      --bg-light: #f3f4f6;     /* light gray */
+      --bg-body: #e5e7eb;      /* light gray page background */
       --card-bg: #ffffff;
       --accent: #2563eb;       /* blue */
       --accent-soft: #1d4ed8;
+      --nav-text: #0f172a;     /* dark navy */
       --text-main: #111827;
       --text-muted: #6b7280;
+      --border-subtle: #e5e7eb;
     }
 
     * {
@@ -22,7 +23,7 @@
     body {
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background-color: var(--bg-dark);
+      background-color: var(--bg-body);
       color: var(--text-main);
     }
 
@@ -35,16 +36,16 @@
       text-decoration: underline;
     }
 
-    /* TOP NAVIGATION */
+    /* TOP NAVIGATION (light, clean) */
 
     .top-nav {
-      background: #020617;
-      color: #e5e7eb;
+      background: #ffffff;
+      color: var(--nav-text);
       padding: 0.75rem 1.5rem;
       position: sticky;
       top: 0;
       z-index: 20;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+      box-shadow: 0 3px 10px rgba(15,23,42,0.10);
     }
 
     .nav-inner {
@@ -59,27 +60,28 @@
       font-weight: 600;
       letter-spacing: 0.03em;
       font-size: 0.95rem;
+      color: var(--nav-text);
     }
 
     .nav-links a {
       margin-left: 1.25rem;
       font-size: 0.9rem;
-      color: #e5e7eb;
+      color: var(--nav-text);
     }
 
     .nav-links a:hover {
-      color: #ffffff;
+      color: var(--accent-soft);
     }
 
     /* PAGE WRAPPER */
 
     .page {
       max-width: 960px;
-      margin: 32px auto 40px;
-      padding: 32px 28px 36px;
+      margin: 28px auto 36px;
+      padding: 28px 26px 34px;
       background: var(--card-bg);
       border-radius: 18px;
-      box-shadow: 0 20px 50px rgba(15,23,42,0.55);
+      box-shadow: 0 16px 40px rgba(15,23,42,0.18);
     }
 
     h1 {
@@ -90,7 +92,7 @@
 
     h2 {
       font-size: 1.35rem;
-      margin-top: 0.5rem;
+      margin-top: 0.4rem;
       margin-bottom: 0.75rem;
       color: #111827;
     }
@@ -122,18 +124,26 @@
       margin-top: 0.25rem;
     }
 
-    /* HERO SECTION */
+    /* HERO / BANNER */
 
     .hero {
-      margin-bottom: 1.5rem;
+      background: radial-gradient(circle at top left, #dbeafe 0, #eff6ff 30%, #ffffff 65%);
+      border-radius: 16px;
+      padding: 22px 20px 24px;
+      margin-bottom: 1.75rem;
+      border: 1px solid var(--border-subtle);
+    }
+
+    .hero-heading {
+      margin-bottom: 0.2rem;
     }
 
     .hero-grid {
       display: grid;
-      grid-template-columns: minmax(0, 1.2fr) minmax(0, 2fr);
+      grid-template-columns: minmax(0, 1.1fr) minmax(0, 1.9fr);
       gap: 1.75rem;
       align-items: center;
-      margin-top: 1rem;
+      margin-top: 1.2rem;
     }
 
     .hero-photo {
@@ -142,25 +152,25 @@
     }
 
     .profile-photo {
-      width: 190px;
-      height: 190px;
+      width: 230px;             /* bigger image */
+      height: 230px;
       max-width: 100%;
       object-fit: cover;
-      border-radius: 18px;
-      box-shadow: 0 16px 35px rgba(15,23,42,0.45);
+      border-radius: 20px;
+      box-shadow: 0 18px 38px rgba(15,23,42,0.35);
     }
 
     .hero-intro-title {
       font-weight: 600;
       margin-bottom: 0.3rem;
-      font-size: 1.05rem;
+      font-size: 0.95rem;
       text-transform: uppercase;
-      letter-spacing: 0.08em;
+      letter-spacing: 0.12em;
       color: var(--accent-soft);
     }
 
     .hero-intro-text p {
-      margin-bottom: 0.6rem;
+      margin-bottom: 0.55rem;
     }
 
     /* BUTTONS */
@@ -203,11 +213,11 @@
       color: var(--accent);
     }
 
-    /* SECTION DIVIDERS */
+    /* SECTION DIVIDER */
 
     .section-divider {
       height: 1px;
-      background: #e5e7eb;
+      background: var(--border-subtle);
       margin: 1.75rem 0 1.5rem;
     }
 
@@ -220,25 +230,6 @@
 
     .pricing-highlight {
       font-weight: 600;
-    }
-
-    /* TESTIMONIALS */
-
-    .testimonial-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-      gap: 1rem;
-      margin-top: 0.75rem;
-    }
-
-    .testimonial-card {
-      border-radius: 12px;
-      border: 1px dashed #d4d4d8;
-      padding: 0.9rem 1rem;
-      background: #fafafa;
-      font-size: 0.9rem;
-      color: var(--text-muted);
-      text-align: center;
     }
 
     /* CONTACT */
@@ -258,9 +249,9 @@
 
     .footer {
       max-width: 960px;
-      margin: 0 auto 24px;
+      margin: 0 auto 22px;
       padding: 0 16px;
-      color: #9ca3af;
+      color: #6b7280;
       font-size: 0.8rem;
       display: flex;
       justify-content: space-between;
@@ -280,12 +271,17 @@
       }
 
       .page {
-        margin: 20px 12px 28px;
-        padding: 22px 18px 26px;
+        margin: 16px 10px 26px;
+        padding: 20px 16px 26px;
+      }
+
+      .hero {
+        padding: 18px 14px 20px;
       }
 
       .hero-grid {
         grid-template-columns: 1fr;
+        gap: 1.2rem;
       }
 
       .hero-photo {
@@ -293,8 +289,8 @@
       }
 
       .profile-photo {
-        width: 170px;
-        height: 170px;
+        width: 210px;
+        height: 210px;
       }
 
       .footer {
@@ -315,7 +311,6 @@
         <a href="#about">About</a>
         <a href="#services">What I Tutor</a>
         <a href="#pricing">Pricing</a>
-        <a href="#testimonials">Reviews</a>
         <a href="#contact">Contact</a>
         <a href="credentials.html">Credentials</a>
       </nav>
@@ -326,8 +321,10 @@
   <main class="page">
     <!-- HERO / ABOUT -->
     <section id="about" class="hero">
-      <h1>Math Tutoring for Elementary & Middle School Students</h1>
-      <p class="muted">1-on-1, patient, in-person support focused on real understanding.</p>
+      <div class="hero-heading">
+        <h1>Math Tutoring for Kids &amp; Teenagers</h1>
+        <p class="muted">1-on-1, patient, in-person support focused on real understanding.</p>
+      </div>
 
       <div class="hero-grid">
         <div class="hero-photo">
@@ -357,7 +354,7 @@
 
           <div class="button-row">
             <a class="btn-primary"
-               href="mailto:your-email@example.com?subject=Math%20Tutoring%20Inquiry">
+               href="mailto:novik.ben@gmail.com?subject=Math%20Tutoring%20Inquiry">
               Email me about tutoring
             </a>
             <a class="btn-ghost" href="#pricing">View pricing</a>
@@ -379,7 +376,7 @@
       </p>
       <p>
         My approach is calm, step-by-step, and focused on building confidence. I make math
-        feel simpler and more logical so kids actually start to feel good about it.
+        feel simpler and more logical so students actually start to feel good about it.
       </p>
     </section>
 
@@ -392,7 +389,7 @@
         <li>Word problems and logical thinking</li>
         <li>Pre-Algebra</li>
         <li>Algebra I</li>
-        <li>Homework help + test preparation</li>
+        <li>General homework help + test preparation</li>
       </ul>
     </section>
 
@@ -406,7 +403,7 @@
       </p>
       <p>
         We’ll look over homework, quizzes, and tests so I can see what’s confusing
-        or intimidating. Every child learns differently, so I adjust my explanations
+        or intimidating. Every student learns differently, so I adjust my explanations
         and strategies to match what works best for them.
       </p>
       <p>
@@ -445,31 +442,13 @@
       </p>
     </section>
 
-    <!-- TESTIMONIALS -->
-    <section id="testimonials">
-      <div class="section-divider"></div>
-      <h3>Reviews (Coming Soon)</h3>
-      <p class="muted">
-        As I work with more families, I’ll add short reviews here so parents can see
-        real experiences from other students.
-      </p>
-      <div class="testimonial-grid">
-        <div class="testimonial-card">
-          Future parent review will appear here once I’ve worked with more students.
-        </div>
-        <div class="testimonial-card">
-          Another spot for feedback about progress, confidence, and improvements in math.
-        </div>
-      </div>
-    </section>
-
     <!-- CONTACT -->
     <section id="contact">
       <div class="section-divider"></div>
       <h3>Contact Me</h3>
       <p>Parents can reach me directly at:</p>
       <p class="contact-email">
-        <a href="mailto:your-email@example.com">your-email@example.com</a>
+        <a href="mailto:novik.ben@gmail.com">novik.ben@gmail.com</a>
       </p>
       <p class="fine-print">
         Feel free to include your child’s grade, school, current math topic, and a few times that work
@@ -478,7 +457,7 @@
 
       <div class="button-row">
         <a class="btn-primary"
-           href="mailto:your-email@example.com?subject=Math%20Tutoring%20Inquiry">
+           href="mailto:novik.ben@gmail.com?subject=Math%20Tutoring%20Inquiry">
           Email Ben to ask about tutoring
         </a>
       </div>
