--- a/credentials.html
+++ b/credentials.html
@@ -6,13 +6,14 @@
 
   <style>
     :root {
-      --bg-dark: #0f172a;
-      --bg-light: #f3f4f6;
+      --bg-body: #e5e7eb;
       --card-bg: #ffffff;
       --accent: #2563eb;
       --accent-soft: #1d4ed8;
+      --nav-text: #0f172a;
       --text-main: #111827;
       --text-muted: #6b7280;
+      --border-subtle: #e5e7eb;
     }
 
     * {
@@ -22,7 +23,7 @@
     body {
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background-color: var(--bg-dark);
+      background-color: var(--bg-body);
       color: var(--text-main);
     }
 
@@ -36,13 +37,13 @@
     }
 
     .top-nav {
-      background: #020617;
-      color: #e5e7eb;
+      background: #ffffff;
+      color: var(--nav-text);
       padding: 0.75rem 1.5rem;
       position: sticky;
       top: 0;
       z-index: 20;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+      box-shadow: 0 3px 10px rgba(15,23,42,0.10);
     }
 
     .nav-inner {
@@ -57,25 +58,26 @@
       font-weight: 600;
       letter-spacing: 0.03em;
       font-size: 0.95rem;
+      color: var(--nav-text);
     }
 
     .nav-links a {
       margin-left: 1.25rem;
       font-size: 0.9rem;
-      color: #e5e7eb;
+      color: var(--nav-text);
     }
 
     .nav-links a:hover {
-      color: #ffffff;
+      color: var(--accent-soft);
     }
 
     .page {
       max-width: 960px;
-      margin: 32px auto 40px;
-      padding: 30px 26px 34px;
+      margin: 28px auto 36px;
+      padding: 26px 24px 30px;
       background: var(--card-bg);
       border-radius: 18px;
-      box-shadow: 0 20px 50px rgba(15,23,42,0.55);
+      box-shadow: 0 16px 40px rgba(15,23,42,0.18);
       text-align: center;
     }
 
@@ -95,6 +97,7 @@
       border-radius: 12px;
       margin: 1rem 0 2rem;
       box-shadow: 0 18px 40px rgba(15,23,42,0.45);
+      border: 1px solid var(--border-subtle);
     }
 
     .btn-link {
@@ -126,15 +129,15 @@
       }
 
       .page {
-        margin: 20px 12px 28px;
-        padding: 22px 18px 26px;
+        margin: 16px 10px 26px;
+        padding: 20px 16px 24px;
       }
     }
   </style>
 </head>
 
 <body>
-  <!-- TOP NAV (same as main site) -->
+  <!-- TOP NAV -->
   <header class="top-nav">
     <div class="nav-inner">
       <div class="nav-logo">BEN NOVIK • MATH TUTOR</div>
