--- a/credentials.html
+++ b/credentials.html
@@ -153,7 +153,7 @@
     <h1>Credentials</h1>
     <p>Below is my diploma for parents who would like to verify my academic background.</p>
 
-    <img src="diploma.JPG" alt="Diploma for Ben Novik" class="diploma-img">
+    <img src="diploma.jpg" alt="Diploma for Ben Novik" class="diploma-img">
 
     <a href="index.html" class="btn-link">← Back to main site</a>
   </main>
