--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     }
 
     .profile-photo {
-      width: 230px;             /* bigger image */
+      width: 230px;
       height: 230px;
       max-width: 100%;
       object-fit: cover;
@@ -311,6 +311,7 @@
         <a href="#about">About</a>
         <a href="#services">What I Tutor</a>
         <a href="#pricing">Pricing</a>
+        <a href="booking.html">Book a Session</a>
         <a href="#contact">Contact</a>
         <a href="credentials.html">Credentials</a>
       </nav>
@@ -354,10 +355,12 @@
 
           <div class="button-row">
             <a class="btn-primary"
-               href="mailto:novik.ben@gmail.com?subject=Math%20Tutoring%20Inquiry">
-              Email me about tutoring
+               href="booking.html">
+              Book a first session
             </a>
-            <a class="btn-ghost" href="#pricing">View pricing</a>
+            <a class="btn-ghost" href="mailto:novik.ben@gmail.com?subject=Math%20Tutoring%20Inquiry">
+              Email me directly
+            </a>
           </div>
         </div>
       </div>
@@ -456,9 +459,12 @@
       </p>
 
       <div class="button-row">
-        <a class="btn-primary"
+        <a class="btn-primary" href="booking.html">
+          Book a first session
+        </a>
+        <a class="btn-ghost"
            href="mailto:novik.ben@gmail.com?subject=Math%20Tutoring%20Inquiry">
-          Email Ben to ask about tutoring
+          Email Ben with questions
         </a>
       </div>
     </section>
