--- a/booking.html
+++ b/booking.html
@@ -23,8 +23,7 @@
     body {
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background-color: --bg-body;
-      background-color: #e5e7eb;
+      background-color: var(--bg-body);
       color: var(--text-main);
     }
 
@@ -240,8 +239,13 @@
       about sessions.
     </p>
 
-    <!-- Simple email-based form -->
-    <form action="mailto:novik.ben@gmail.com" method="POST" enctype="text/plain">
+    <!-- Formspree-powered form -->
+    <form
+      action="https://formspree.io/f/xnnkvban"
+      method="POST"
+    >
+      <input type="hidden" name="_subject" value="New tutoring inquiry from your website">
+
       <div class="form-grid">
         <div>
           <label for="parent-name">Parent / Guardian Name</label>
@@ -299,7 +303,3 @@
         <button type="submit" class="btn-primary">Send details to Ben</button>
         <a href="mailto:novik.ben@gmail.com" class="btn-ghost">Or email me directly</a>
       </div>
-    </form>
-  </main>
-</body>
-</html>
